@@ -32,59 +32,59 @@ Format: 1.35
 
 Group: User Documentation  {
 
-   File: LnBlog User Documentation  (docs\overview.txt)
-   File: Feature List  (docs\features.txt)
-   File: To do list  (docs\todo.txt)
-   File: Translations  (docs\translations.txt)
-   File: How plugins work  (docs\plugins.txt)
+   File: LnBlog User Documentation  (docs/overview.txt)
+   File: Feature List  (docs/features.txt)
+   File: To do list  (docs/todo.txt)
+   File: Translations  (docs/translations.txt)
+   File: How plugins work  (docs/plugins.txt)
    }  # Group: User Documentation
 
 Group: Configuration  {
 
    File: blogconfig.php  (blogconfig.php)
-   File: constants.php  (lib\constants.php)
-   File: fsconfig.php  (docs\fsconfig.txt)
-   File: userconfig.cfg  (docs\userconfig.txt)
-   File: userconfig.php  (docs\userconfigphp.txt)
+   File: constants.php  (lib/constants.php)
+   File: fsconfig.php  (docs/fsconfig.txt)
+   File: userconfig.cfg  (docs/userconfig.txt)
+   File: userconfig.php  (docs/userconfigphp.txt)
    }  # Group: Configuration
 
 Group: Libraries  {
 
-   File: Article  (lib\article.php)
-   File: Blog  (lib\blog.php)
-   File: BlogComment  (lib\blogcomment.php)
-   File: BlogEntry  (lib\blogentry.php)
-   File: Creator Functions  (no auto-title, lib\creators.php)
-   File: Entry  (lib\entry.php)
-   File: EventRegister  (lib\eventregister.php)
-   File: FS  (lib\fs.php)
-   File: Internationalization  (no auto-title, lib\i18n.php)
-   File: lbcode.php  (lib\lbcode.php)
-   File: LnBlogObject  (lib\lnblogobject.php)
-   File: Page  (lib\page.php)
-   File: PHPTemplate  (lib\template.php)
-   File: Plugin  (lib\plugin.php)
-   File: PluginManager  (lib\pluginmanager.php)
-   File: User  (lib\user.php)
+   File: Article  (lib/article.php)
+   File: Blog  (lib/blog.php)
+   File: BlogComment  (lib/blogcomment.php)
+   File: BlogEntry  (lib/blogentry.php)
+   File: Creator Functions  (no auto-title, lib/creators.php)
+   File: Entry  (lib/entry.php)
+   File: EventRegister  (lib/eventregister.php)
+   File: FS  (lib/fs.php)
+   File: Internationalization  (no auto-title, lib/i18n.php)
+   File: lbcode.php  (lib/lbcode.php)
+   File: LnBlogObject  (lib/lnblogobject.php)
+   File: Page  (lib/page.php)
+   File: PHPTemplate  (lib/template.php)
+   File: Plugin  (lib/plugin.php)
+   File: PluginManager  (lib/pluginmanager.php)
+   File: User  (lib/user.php)
    }  # Group: Libraries
 
 Group: Pages  {
 
-   File: delcomment.php  (pages\delcomment.php)
-   File: delentry.php  (pages\delentry.php)
-   File: editarticle.php  (pages\editarticle.php)
-   File: editentry.php  (pages\editentry.php)
-   File: editlogin.php  (pages\editlogin.php)
-   File: fileupload.php  (pages\fileupload.php)
-   File: newarticle.php  (pages\newarticle.php)
-   File: newentry.php  (pages\newentry.php)
-   File: showall.php  (pages\showall.php)
-   File: showarchive.php  (pages\showarchive.php)
-   File: showarticle.php  (pages\showarticle.php)
-   File: showarticles.php  (pages\showarticles.php)
-   File: showblog.php  (pages\showblog.php)
-   File: showcomments.php  (pages\showcomments.php)
-   File: showday.php  (pages\showday.php)
+   File: delcomment.php  (pages/delcomment.php)
+   File: delentry.php  (pages/delentry.php)
+   File: editarticle.php  (pages/editarticle.php)
+   File: editentry.php  (pages/editentry.php)
+   File: editlogin.php  (pages/editlogin.php)
+   File: fileupload.php  (pages/fileupload.php)
+   File: newarticle.php  (pages/newarticle.php)
+   File: newentry.php  (pages/newentry.php)
+   File: showall.php  (pages/showall.php)
+   File: showarchive.php  (pages/showarchive.php)
+   File: showarticle.php  (pages/showarticle.php)
+   File: showarticles.php  (pages/showarticles.php)
+   File: showblog.php  (pages/showblog.php)
+   File: showcomments.php  (pages/showcomments.php)
+   File: showday.php  (pages/showday.php)
    }  # Group: Pages
 
 Group: Administration Pages  {
